[package]
name = "rusty-gbe"
version = "0.1.0"
authors = ["Mark Featherston <mark@embeddedarm.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = ["debug-asm"]
debug-asm = []

[dependencies]
#rc-zip = "0.0.1"
