[package]
name = "rusty-gbe"
version = "0.1.0"
authors = ["Mark Featherston <mark@embeddedarm.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
pixels = "0.2"
gilrs = "0.7.4"
winit = "0.22.0"
winit_input_helper = "0.6.0"
env_logger = "0.7.1"
log = "0.4.8"